Fix tests to use local DTD for parsing rather than getting over http.
Clean up some unused test files.

Renamed the test/ConnectorTestUtilsTest.java to common/StringUtilsTest.java
since that's what it was testing.

Tests Passed:
  - All Unit Tests from Ant (note ThreadPoolTest still flaky)
  - All Unit Tests from Eclipse

ChangeLog:
M connector-manager/.classpath
  - Added DTD directory as source folder.
  - Changed JRE class path entry to 1.5.

M connector-manager/build.xml
  - Added DTD directory to junit target.
  - Changed comment related to adding tests.src to the junit target.

M connector-manager/source/java/com/google/enterprise/connector/instantiator/EncryptedPropertyPlaceholderConfigurer.java
  - Changed to use our own Base64 encoder/decoder to remove warnings related to restricted access.

M connector-manager/source/javatests/com/google/enterprise/connector/test/ConnectorTestUtils.java
  - Removed unused methods.

D connector-manager/source/javatests/com/google/enterprise/connector/test/ConnectorTestUtilsTest.java
  - Renamed and moved to common/StringUtilsTest.java since that's all it was testing.

A connector-manager/source/javatests/com/google/enterprise/connector/common/StringUtilsTest.java
  - This is basically the test/ConnectorTestUtilsTest.java renamed and moved.
  - Some cleanup.

A connector-manager/source/javatests/com/google/enterprise/connector/common/testFile1.txt
  - Moved from testdata to support StringUtilsTest.

D connector-manager/source/javatests/com/google/enterprise/connector/testdata
D connector-manager/source/javatests/com/google/enterprise/connector/testdata/props.txt
D connector-manager/source/javatests/com/google/enterprise/connector/testdata/events.txt
D connector-manager/source/javatests/com/google/enterprise/connector/testdata/events2.txt
  - Removed - unused.

D connector-manager/source/javatests/com/google/enterprise/connector/testdata/testFile1.txt
  - Moved to common package to support related StringUtilsTest.

M test-con